# fqtool

./: README.md  configure.ac
src/: .umiprocessor.cpp.swp  Doxygen  adaptertrimmer.cpp  adaptertrimmer.h  basecorrector.cpp  basecorrector.h  common.h  dirutil.h  duplicate.cpp  duplicate.h  evaluator.cpp  evaluator.h  filter.cpp  filter.h  filterresult.cpp  filterresult.h  fqreader.cpp  fqreader.h  htmlreporter.cpp  htmlreporter.h  htmlutil.h  json.hpp  jsonreporter.cpp  jsonreporter.h  knownadapters.h  main.cpp  makefile.am  nucleotidetree.cpp  nucleotidetree.h  options.cpp  options.h  overlapanalysis.cpp  overlapanalysis.h  peprocessor.cpp  peprocessor.h  polyx.cpp  polyx.h  processor.cpp  processor.h  read.cpp  (+13 more)
testdata/: polygr1.fq  polygr2.fq
